log
Thu May  5 15:06:21 UTC 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:20: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->capac = 0;
   ~~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
805b6d5
Thu May  5 15:06:53 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->size = 0;
   ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e4b947e
Thu May  5 15:06:55 UTC 2022: 
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->size = 0;
   ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
244e4ba
Thu May  5 15:07:26 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
5948f06
Thu May  5 15:07:38 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ec806b5
Thu May  5 15:07:45 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
cc075a3
Thu May  5 15:07:52 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e43049a
Thu May  5 15:08:46 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
fd936d5
